feat(lang): Enhance integer scalar type handling and add support for new GLSL types